include/StTrgApi.h

//Callback Function
typedef void (WINAPI *funcExposureEndCallback)(HANDLE hCamera, DWORD dwFrameNo, PVOID pvContext);
typedef void (WINAPI *funcTransferEndCallback)(HANDLE hCamera, DWORD dwFrameNo, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, PVOID pvContext);
typedef void (WINAPI *funcRcvErrorCallback)(HANDLE hCamera, DWORD dwErrorCode, PVOID pvContext);
//-----------------------------------------------------------------------------
//Initialize
//-----------------------------------------------------------------------------
HANDLE WINAPI StTrg_Open();
VOID WINAPI StTrg_Close(HANDLE hCamera);
//-----------------------------------------------------------------------------
//Camera Information
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetDllVersion(PDWORD pdwFileVersionMS, PDWORD pdwFileVersionLS, PDWORD pdwProductVersionMS, PDWORD pdwProductVersionLS);
BOOL WINAPI StTrg_GetCameraVersion(HANDLE hCamera, PWORD pwUSBVendorID, PWORD pwUSBProductID, PWORD pwFPGAVersion, PWORD pwFirmVersion);
BOOL WINAPI StTrg_GetProductNameA(HANDLE hCamera, PSTR pszProductName, DWORD dwBufferSize);
BOOL WINAPI StTrg_GetProductNameW(HANDLE hCamera, PWSTR pszProductName, DWORD dwBufferSize);
BOOL WINAPI StTrg_GetColorArray(HANDLE hCamera, PWORD pwColorArray);
BOOL WINAPI StTrg_HasFunction(HANDLE hCamera, DWORD dwCameraFunctionID, BOOL* pbHasFunction);
BOOL WINAPI StTrg_ReadUserMemory(HANDLE hCamera, PBYTE pbyteData, WORD wOffset, WORD wLength);
BOOL WINAPI StTrg_WriteUserMemory(HANDLE hCamera, PBYTE pbyteData, WORD wOffset, WORD wLength);
BOOL WINAPI StTrg_ReadCameraUserIDA(HANDLE hCamera, PDWORD pdwCameraID, PSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_ReadCameraUserIDW(HANDLE hCamera, PDWORD pdwCameraID, PWSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_WriteCameraUserIDA(HANDLE hCamera, DWORD dwCameraID, PCSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_WriteCameraUserIDW(HANDLE hCamera, DWORD dwCameraID, PCWSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_ResetCounter(HANDLE hCamera);
//-----------------------------------------------------------------------------
//Setting
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_WriteSettingFileW(HANDLE hCamera, PCWSTR pszFileName);
BOOL WINAPI StTrg_WriteSettingFileA(HANDLE hCamera, PCSTR pszFileName);
BOOL WINAPI StTrg_ReadSettingFileW(HANDLE hCamera, PCWSTR pszFileName);
BOOL WINAPI StTrg_ReadSettingFileA(HANDLE hCamera, PCSTR pszFileName);
BOOL WINAPI StTrg_CameraSetting(HANDLE hCamera, WORD wMode);
//-----------------------------------------------------------------------------
//Image Information
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetEnableScanMode(HANDLE hCamera, PWORD pwEnableScanMode);
BOOL WINAPI StTrg_GetMaximumImageSize(HANDLE hCamera, PDWORD pdwMaximumImageWidth, PDWORD pdwMaximumImageHeight);
BOOL WINAPI StTrg_GetScanMode(HANDLE hCamera, PWORD pwScanMode, PDWORD pdwOffsetX, PDWORD pdwOffsetY, PDWORD pdwWidth, PDWORD pdwHeight);
BOOL WINAPI StTrg_SetScanMode(HANDLE hCamera, WORD wScanMode, DWORD dwOffsetX, DWORD dwOffsetY, DWORD dwWidth, DWORD dwHeight);
BOOL WINAPI StTrg_GetEnableTransferBitsPerPixel(HANDLE hCamera, PDWORD pdwEnableTransferBitsPerPixel);
BOOL WINAPI StTrg_GetTransferBitsPerPixel(HANDLE hCamera, PDWORD pdwTransferBitsPerPixel);
BOOL WINAPI StTrg_SetTransferBitsPerPixel(HANDLE hCamera, DWORD dwTransferBitsPerPixel);
BOOL WINAPI StTrg_GetSkippingAndBinning(HANDLE hCamera, PBYTE pbyteHSkipping, PBYTE pbyteVSkipping, PBYTE pbyteHBinning, PBYTE pbyteVBinning);
BOOL WINAPI StTrg_SetSkippingAndBinning(HANDLE hCamera, BYTE byteHSkipping, BYTE byteVSkipping, BYTE byteHBinning, BYTE byteVBinning);
BOOL WINAPI StTrg_GetBinningSumMode(HANDLE hCamera, PWORD pwValue);
BOOL WINAPI StTrg_SetBinningSumMode(HANDLE hCamera, WORD wValue);
BOOL WINAPI StTrg_ConvTo8BitsImage(DWORD dwWidth, DWORD dwHeight, DWORD dwTransferBitsPerPixel, PWORD pwRaw, PBYTE pbyteRaw);
BOOL WINAPI StTrg_ConvYUVOrBGRToBGRImage(DWORD dwWidth, DWORD dwHeight, DWORD dwTransferBitsPerPixel, PBYTE pbyteYUVOrBGR, DWORD dwPixelFormat, PBYTE pbyteBGR);
//-----------------------------------------------------------------------------
//Clock
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetOutputFPS(HANDLE hCamera, PFLOAT pfFPS);
BOOL WINAPI StTrg_GetClock(HANDLE hCamera, PDWORD pdwClockMode, PDWORD pdwClock);
BOOL WINAPI StTrg_SetClock(HANDLE hCamera, DWORD dwClockMode, DWORD dwClock);
BOOL WINAPI StTrg_GetEnableClockMode(HANDLE hCamera, PDWORD pdwClockMode);
BOOL WINAPI StTrg_GetVBlankForFPS(HANDLE hCamera, PDWORD pdwVLines);
BOOL WINAPI StTrg_SetVBlankForFPS(HANDLE hCamera, DWORD dwVLines);
BOOL WINAPI StTrg_GetMaxVBlankForFPS(HANDLE hCamera, PDWORD pdwVLines);
BOOL WINAPI StTrg_GetFrameClock(HANDLE hCamera, PWORD pwTotalLine, PWORD pwTotalHClock);
#define StTrg_ReadCameraUserID StTrg_ReadCameraUserIDW
#define StTrg_WriteCameraUserID StTrg_WriteCameraUserIDW
#define StTrg_WriteSettingFile StTrg_WriteSettingFileW
#define StTrg_ReadSettingFile StTrg_ReadSettingFileW
#define StTrg_GetProductName StTrg_GetProductNameW
#define StTrg_ReadCameraUserID StTrg_ReadCameraUserIDA
#define StTrg_WriteCameraUserID StTrg_WriteCameraUserIDA
#define StTrg_WriteSettingFile StTrg_WriteSettingFileA
#define StTrg_ReadSettingFile StTrg_ReadSettingFileA
#define StTrg_GetProductName StTrg_GetProductNameA