SetCameraFunction.h

BOOL	GetCameraVersion(HANDLE hCamera);
BOOL	GetColorArray(HANDLE hCamera);
BOOL	SetScanMode(HANDLE hCamera);