include/StTrgAPI.vb

'Created Date:2013/08/09 17:05
Imports System.Runtime.InteropServices
Public Class StTrg
	Public Delegate Sub funcExposureEndCallback(ByVal hCamera As IntPtr, ByVal dwFrameNo as System.UInt32, ByVal lpContext As IntPtr)
	Public Delegate Sub funcTransferEndCallback(ByVal hCamera As IntPtr, ByVal dwFrameNo as System.UInt32, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16, ByVal pvRaw as IntPtr, ByVal lpContext As IntPtr)
	Public Delegate Sub funcRcvErrorCallback(ByVal hCamera As IntPtr, ByVal dwErrorCode as System.UInt32, ByVal lpContext As IntPtr)
	
	'------------------------------------------------------------------------------
	'Initialize
	'------------------------------------------------------------------------------
	Public Declare Function Open Lib "StTrgAPI.dll" Alias "StTrg_Open" () As IntPtr
	Public Declare Sub Close Lib "StTrgAPI.dll" Alias "StTrg_Close" (ByVal hCamera As IntPtr)
	
	'------------------------------------------------------------------------------
	'Camera Information
	'------------------------------------------------------------------------------
	Public Declare Function GetDllVersion Lib "StTrgAPI.dll" Alias "StTrg_GetDllVersion" (ByRef pdwFileVersionMS As System.UInt32, ByRef pdwFileVersionLS As System.UInt32, ByRef pdwProductVersionMS As System.UInt32, ByRef pdwProductVersionLS As System.UInt32) As integer
	Public Declare Function GetCameraVersion Lib "StTrgAPI.dll" Alias "StTrg_GetCameraVersion" (ByVal hCamera As IntPtr, ByRef pwUSBVendorID As System.UInt16, ByRef pwUSBProductID As System.UInt16, ByRef pwFPGAVersion As System.UInt16, ByRef pwFirmVersion As System.UInt16) As integer
	Public Declare Function GetProductNameA Lib "StTrgAPI.dll" Alias "StTrg_GetProductNameA" (ByVal hCamera As IntPtr, ByVal pszProductName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function GetProductNameW Lib "StTrgAPI.dll" Alias "StTrg_GetProductNameW" (ByVal hCamera As IntPtr, ByVal pszProductName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Auto Function GetProductName Lib "StTrgAPI.dll" Alias "StTrg_GetProductName" (ByVal hCamera As IntPtr, ByVal pszProductName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function GetColorArray Lib "StTrgAPI.dll" Alias "StTrg_GetColorArray" (ByVal hCamera As IntPtr, ByRef pwColorArray As System.UInt16) As integer
	Public Declare Function HasFunction Lib "StTrgAPI.dll" Alias "StTrg_HasFunction" (ByVal hCamera As IntPtr, ByVal dwCameraFunctionID As System.UInt32, ByRef pbHasFunction As integer) As integer
	Public Declare Function ReadUserMemory Lib "StTrgAPI.dll" Alias "StTrg_ReadUserMemory" (ByVal hCamera As IntPtr,  pbyteData As IntPtr, ByVal wOffset As System.UInt16, ByVal wLength As System.UInt16) As integer
	Public Declare Function WriteUserMemory Lib "StTrgAPI.dll" Alias "StTrg_WriteUserMemory" (ByVal hCamera As IntPtr,  pbyteData As IntPtr, ByVal wOffset As System.UInt16, ByVal wLength As System.UInt16) As integer
	Public Declare Function ReadCameraUserIDA Lib "StTrgAPI.dll" Alias "StTrg_ReadCameraUserIDA" (ByVal hCamera As IntPtr, ByRef pdwCameraID As System.UInt32, ByVal pszCameraName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function ReadCameraUserIDW Lib "StTrgAPI.dll" Alias "StTrg_ReadCameraUserIDW" (ByVal hCamera As IntPtr, ByRef pdwCameraID As System.UInt32, ByVal pszCameraName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Auto Function ReadCameraUserID Lib "StTrgAPI.dll" Alias "StTrg_ReadCameraUserID" (ByVal hCamera As IntPtr, ByRef pdwCameraID As System.UInt32, ByVal pszCameraName As System.Text.StringBuilder, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function WriteCameraUserIDA Lib "StTrgAPI.dll" Alias "StTrg_WriteCameraUserIDA" (ByVal hCamera As IntPtr, ByVal dwCameraID As System.UInt32, ByVal pszCameraName As String, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function WriteCameraUserIDW Lib "StTrgAPI.dll" Alias "StTrg_WriteCameraUserIDW" (ByVal hCamera As IntPtr, ByVal dwCameraID As System.UInt32, ByVal pszCameraName As String, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Auto Function WriteCameraUserID Lib "StTrgAPI.dll" Alias "StTrg_WriteCameraUserID" (ByVal hCamera As IntPtr, ByVal dwCameraID As System.UInt32, ByVal pszCameraName As String, ByVal dwBufferSize As System.UInt32) As integer
	Public Declare Function ResetCounter Lib "StTrgAPI.dll" Alias "StTrg_ResetCounter" (ByVal hCamera As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'Setting
	'------------------------------------------------------------------------------
	Public Declare Function WriteSettingFileW Lib "StTrgAPI.dll" Alias "StTrg_WriteSettingFileW" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Auto Function WriteSettingFile Lib "StTrgAPI.dll" Alias "StTrg_WriteSettingFile" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Function WriteSettingFileA Lib "StTrgAPI.dll" Alias "StTrg_WriteSettingFileA" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Function ReadSettingFileW Lib "StTrgAPI.dll" Alias "StTrg_ReadSettingFileW" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Auto Function ReadSettingFile Lib "StTrgAPI.dll" Alias "StTrg_ReadSettingFile" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Function ReadSettingFileA Lib "StTrgAPI.dll" Alias "StTrg_ReadSettingFileA" (ByVal hCamera As IntPtr, ByVal pszFileName As String) As integer
	Public Declare Function CameraSetting Lib "StTrgAPI.dll" Alias "StTrg_CameraSetting" (ByVal hCamera As IntPtr, ByVal wMode As System.UInt16) As integer
	
	'------------------------------------------------------------------------------
	'Image Information
	'------------------------------------------------------------------------------
	Public Declare Function GetEnableScanMode Lib "StTrgAPI.dll" Alias "StTrg_GetEnableScanMode" (ByVal hCamera As IntPtr, ByRef pwEnableScanMode As System.UInt16) As integer
	Public Declare Function GetMaximumImageSize Lib "StTrgAPI.dll" Alias "StTrg_GetMaximumImageSize" (ByVal hCamera As IntPtr, ByRef pdwMaximumImageWidth As System.UInt32, ByRef pdwMaximumImageHeight As System.UInt32) As integer
	Public Declare Function GetScanMode Lib "StTrgAPI.dll" Alias "StTrg_GetScanMode" (ByVal hCamera As IntPtr, ByRef pwScanMode As System.UInt16, ByRef pdwOffsetX As System.UInt32, ByRef pdwOffsetY As System.UInt32, ByRef pdwWidth As System.UInt32, ByRef pdwHeight As System.UInt32) As integer
	Public Declare Function SetScanMode Lib "StTrgAPI.dll" Alias "StTrg_SetScanMode" (ByVal hCamera As IntPtr, ByVal wScanMode As System.UInt16, ByVal dwOffsetX As System.UInt32, ByVal dwOffsetY As System.UInt32, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32) As integer
	Public Declare Function GetEnableTransferBitsPerPixel Lib "StTrgAPI.dll" Alias "StTrg_GetEnableTransferBitsPerPixel" (ByVal hCamera As IntPtr, ByRef pdwEnableTransferBitsPerPixel As System.UInt32) As integer
	Public Declare Function GetTransferBitsPerPixel Lib "StTrgAPI.dll" Alias "StTrg_GetTransferBitsPerPixel" (ByVal hCamera As IntPtr, ByRef pdwTransferBitsPerPixel As System.UInt32) As integer
	Public Declare Function SetTransferBitsPerPixel Lib "StTrgAPI.dll" Alias "StTrg_SetTransferBitsPerPixel" (ByVal hCamera As IntPtr, ByVal dwTransferBitsPerPixel As System.UInt32) As integer
	Public Declare Function GetSkippingAndBinning Lib "StTrgAPI.dll" Alias "StTrg_GetSkippingAndBinning" (ByVal hCamera As IntPtr, ByRef pbyteHSkipping As Byte, ByRef pbyteVSkipping As Byte, ByRef pbyteHBinning As Byte, ByRef pbyteVBinning As Byte) As integer
	Public Declare Function SetSkippingAndBinning Lib "StTrgAPI.dll" Alias "StTrg_SetSkippingAndBinning" (ByVal hCamera As IntPtr, ByVal byteHSkipping As Byte, ByVal byteVSkipping As Byte, ByVal byteHBinning As Byte, ByVal byteVBinning As Byte) As integer
	Public Declare Function GetBinningSumMode Lib "StTrgAPI.dll" Alias "StTrg_GetBinningSumMode" (ByVal hCamera As IntPtr, ByRef pwValue As System.UInt16) As integer
	Public Declare Function SetBinningSumMode Lib "StTrgAPI.dll" Alias "StTrg_SetBinningSumMode" (ByVal hCamera As IntPtr, ByVal wValue As System.UInt16) As integer
	Public Declare Function ConvTo8BitsImage Lib "StTrgAPI.dll" Alias "StTrg_ConvTo8BitsImage" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwTransferBitsPerPixel As System.UInt32,  pwRaw As IntPtr,  pbyteRaw As IntPtr) As integer
	Public Declare Function ConvYUVOrBGRToBGRImage Lib "StTrgAPI.dll" Alias "StTrg_ConvYUVOrBGRToBGRImage" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwTransferBitsPerPixel As System.UInt32,  pbyteYUVOrBGR As IntPtr, ByVal dwPixelFormat As System.UInt32,  pbyteBGR As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'Clock
	'------------------------------------------------------------------------------
	Public Declare Function GetOutputFPS Lib "StTrgAPI.dll" Alias "StTrg_GetOutputFPS" (ByVal hCamera As IntPtr, ByRef pfFPS As Single) As integer
	Public Declare Function GetClock Lib "StTrgAPI.dll" Alias "StTrg_GetClock" (ByVal hCamera As IntPtr, ByRef pdwClockMode As System.UInt32, ByRef pdwClock As System.UInt32) As integer
	Public Declare Function SetClock Lib "StTrgAPI.dll" Alias "StTrg_SetClock" (ByVal hCamera As IntPtr, ByVal dwClockMode As System.UInt32, ByVal dwClock As System.UInt32) As integer
	Public Declare Function GetEnableClockMode Lib "StTrgAPI.dll" Alias "StTrg_GetEnableClockMode" (ByVal hCamera As IntPtr, ByRef pdwClockMode As System.UInt32) As integer
	Public Declare Function GetVBlankForFPS Lib "StTrgAPI.dll" Alias "StTrg_GetVBlankForFPS" (ByVal hCamera As IntPtr, ByRef pdwVLines As System.UInt32) As integer
	Public Declare Function SetVBlankForFPS Lib "StTrgAPI.dll" Alias "StTrg_SetVBlankForFPS" (ByVal hCamera As IntPtr, ByVal dwVLines As System.UInt32) As integer
	Public Declare Function GetMaxVBlankForFPS Lib "StTrgAPI.dll" Alias "StTrg_GetMaxVBlankForFPS" (ByVal hCamera As IntPtr, ByRef pdwVLines As System.UInt32) As integer
	Public Declare Function GetFrameClock Lib "StTrgAPI.dll" Alias "StTrg_GetFrameClock" (ByVal hCamera As IntPtr, ByRef pwTotalLine As System.UInt16, ByRef pwTotalHClock As System.UInt16) As integer
